# MLOps-Ass-01

./: .gitignore  Dockerfile  README.md  confusion_matrix.csv  dvc.yaml  metrics.json  pyproject.toml
.dvc/: config
.github/workflows/: build_push.yaml  ci.yml  demo.yml
config/: config.yaml  data.yaml  models.yaml  params.yaml  training.yaml
data/: .gitignore  heart_disease.zip.dvc
notebooks/: eda.ipynb  sample_modelling.ipynb
scripts/: dataset_download_bootstrap.sh
src/: evaluate.py  features.py  orchestrator.py  preprocess.py  train.py
src/data/: data_utils.py  load_data.py
src/features/: preprocess.py
src/models/: factory.py  registry.py
src/training/: evaluate.py  train.py
src/utils/: config_loader.py  mlflow_utils.py
tests/: test_pipeline.py
