[project]
name = "mlops-ass-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.65.0",
    "mlflow>=3.8.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
notebook = [
    "dvc>=3.65.0",
    "jupyter>=1.1.1",
]
test = [
    "pytest>=9.0.2",
]
